deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mindmap
  labels:
    name: mindmap
    app: open-mindmap
